--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Quattrocento Sans' rel='stylesheet'>
 </head>
 <body>
 
@@ -34,12 +35,12 @@
     <div class="column1">
       <img src="me.jpg"></div>
     <div class="column2">
-  <p> Hi! My name is Diana <br>
-    I'm 21, I come from Ukraine but I currently live in Italy. <br>
-  Here I'm attending the Communication Design course in Politecnico di Milano.<br>
-  I have a huge passion for photogaphy
-  and now I'm trying to turn it into my living.<br>
-  <br></p></div>
+  <p> Hi! My name is Diana. <br>
+    I'm 21, I was born in Ukraine but I live in Italy. <br>
+  Currently I'm attending the Communication Design course in Politecnico di Milano.<br>
+  I also have a huge passion for photogaphy. <br>
+  It's been my hobby since I was 16 and now I'm determined to turn this passion into something more.
+</p></div>
 
 </div></section>
 
